src/objects/caredfor_stats__c.object
<CustomObject>
    <fields>
        <fullName>Access_Request__c</fullName>
        <label>Access Request</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facility_Name__c</fullName>
        <formula>CASE( Org_Code__c , &quot;ICR&quot; , &quot;Indiana Center for Recovery&quot; , &quot;THD&quot; , &quot;Haven Detox&quot; , &quot;TRT&quot; , &quot;Recovery Team&quot; , &quot;NA&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invitations__c</fullName>
        <label>Invitations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Logins__c</fullName>
        <label>Logins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Org_Code__c</fullName>
        <label>Org Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posts__c</fullName>
        <label>Posts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reactions__c</fullName>
        <label>Reactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Users__c</fullName>
        <label>Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CaredforStats</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Date__c</columns>
        <columns>Facility_Name__c</columns>
        <columns>Org_Code__c</columns>
        <columns>Access_Request__c</columns>
        <columns>Comments__c</columns>
        <columns>Invitations__c</columns>
        <columns>Logins__c</columns>
        <columns>Posts__c</columns>
        <columns>Reactions__c</columns>
        <columns>Users__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>CaredforStats</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CaredforStats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>